<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_info"
        android:title="@string/inf" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>