<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1976D2">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="369dp"
        android:layout_height="174dp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="371dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="53dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="384dp"
        android:layout_height="173dp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="185dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:text="Continue"
        app:backgroundTint="#000000"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="649dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="345dp"
        android:layout_height="69dp"
        android:text="@string/i_have_read_and_i_agree_to_the_terms_and_conditions"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="565dp"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="78dp"
        android:layout_height="46dp"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="588dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="141dp"
        android:layout_height="107dp"
        app:srcCompat="?android:attr/actionModeFindDrawable"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="78dp"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>